2011-08-25  Per Bothner  <per@bothner.com>

	Clean up and refactor code for genarating interactive class names.
	Make the int counters non static fields of ModuleManager.
	* ModuleManager.java (interactiveCounter, evalCounter,
	interactiveClassPrefix, evalClassPrefix): New fields.
	(getNewInteractiveName, getNewEvalName): New fields.
	* Compilation.java (setModuleName, setInteractiveName,
	setEvalName): New methods.
	* Language.java (eval): Improve prior fix to use setEvalName.
	(getEvalCounter): Remove method.
	* KawaScriptEngine.java (compile): Use new setInteractiveName.
	* ModuleExp.java (interactiveCounter): Remove field.
	(evalToClass): Use ModuleManager#interactiveCounter instead.

2011-08-25  Per Bothner  <per@bothner.com>

	* Language.java (eval): Generate a unique module name, so we get
	unique class names, so usedClass will work.
	(getEvalCounter): New method.
	(env_counter): Remove unused field.

2011-08-24  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Tweak a questionable optimization:
	If Declaration is ignorable, only load value if not a LambdaExp.
	This fixes Savannah bug #34004 (Nullpointer exception in compiler).

2011-08-04  Per Bothner  <per@bothner.com>

	* ApplyExp.java: Optimize tail-recursion even in module-level functions.
	Also fix some issue is tail-recusive varargs functions.
	This fixes Savannah bug #33946] "Missed oppurtunity for tail call".
	* SetExp.java (canUseInc): Treat TARGET=TARGET as equivalent to
	TARGET=TARGET+0 - even if TARGET is non-numeric.

2011-08-01  Per Bothner  <per@bothner.com>

	* Compilation.java (generateBytecode): Make code to relativize source
	path names a bit more robust - specifically for Windows.

2011-07-24  Per Bothner  <per@bothner.com>

	Support for main module that has module-extends.
	*  RunnableModule.java: New interface.
	* Makefile.am: Update accordingly.
	* ModuleBody.java (runAsMain): Add static method.
	* Compilation.java (typeRunnableModule): New static field.